<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gabemaymon@gmail.com">vboxuser</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build-time dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <!-- Dependencies for downstream packages -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_action</build_export_depend>
  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
